fix footer copyright spacing

--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,10 @@ footer {
   font-size: 10px;
 }
 
+.footer__copyright-second {
+  font-size: 8;
+}
+
 .footer__list {
   margin: 20px 0 24px 0; /* ~padding he likes */
 }
